# Qt-GitHub-Actions_3

./: CMakeLists.txt
.github/workflows/: Qt-GitHub-Actions_3.yml
